[package]
name = "github_install"
version = "0.1.0"
edition = "2021"
authors = ["Stürmer, Benjamin <benjamin@stuermer.pro>"]
keywords = ["github", "assets", "apk"]
license = "agpl-3.0"
description = "A simple tool to browse and download apk artifacts from github and install them via adb to an android device."

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.26.3"
crossterm = "0.27.0"
reqwest = { version = "0.12.4", features = ["json"] }
adb_client = "1.0.1"
